k8s/annorepo/stateful-set.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: annorepo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: annorepo
  template:
    metadata:
      labels:
        app: annorepo
    spec:
      containers:
        # https://knaw-huc.github.io/annorepo/docs/install.html
        - name: app
          image: ghcr.io/knaw-huc/annorepo-server:0.7.7
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: ghcr
