k8s/annorepo/service.yml
apiVersion: v1
kind: Service
metadata:
  name: annorepo
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: annorepo
