k8s/annorepo/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: annorepo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - annorepo.demo.netwerkdigitaalerfgoed.nl
      secretName: annorepo-tls
  rules:
    - host: annorepo.demo.netwerkdigitaalerfgoed.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: annorepo
                port:
                  number: 80
